fix impactStats scroll not visible

--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,7 @@
   font-variation-settings:
     "wdth" 100;
 }
+[data-aos] {
+  opacity: 1 !important;
+  transform: none !important;
+}
